[package]
name = "npticket"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
ecdsa = { version = "0.16.9", features = ["pem", "signing", "verifying"] }
p192 = { version = "0.13.0", features = ["ecdsa"] }
p224 = { version = "0.13.2", features = ["ecdsa"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
pem-rfc7468 = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.11"
sha2 = "0.11"
signature = "2.2.0"
