[package]
name = "npticket"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
ecdsa = { version = "0.17.0", features = ["pem"] }

# WARN: Upstream p224 does not support secp224k1; my fork implements it.
#       To avoid multiple versions of `elliptic_curves`, I'm forced to use my fork for all curves.
# 
# p224 = { version = "0.13.2", features = ["ecdsa"] }
p192 = { git = "https://github.com/ZephyrCodesStuff/elliptic-curves.git", branch = "master" }
p224 = { git = "https://github.com/ZephyrCodesStuff/elliptic-curves.git", branch = "master" }
p256 = { git = "https://github.com/ZephyrCodesStuff/elliptic-curves.git", branch = "master" }

pem-rfc7468 = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.11"
sha2 = "0.11"
signature = "2.2.0"
