[package]
name = "npticket"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"

# OpenSSL is used for both signing and verification.
# The `vendored` feature statically links OpenSSL so we don't rely on the system version.
# secp224k1 support is required and is available in OpenSSL's built-in curve table.
# 
# Why? secp224k1 is completely unsupported by the p224 [elliptic-curves] crate, and cannot be implemented
# due to the RustCrypto crates' constraints. See how secp224k1 actually requires 225 bits to understand why.
openssl = { version = "0.10", features = ["vendored"] }

pem-rfc7468 = "1.0"
serde = { version = "1.0", features = ["derive"] }
